# palette

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
lib/: cluster.c  cluster.h  colour.c  colour.h  image.c  image.h
src/: main.c
tests/: cluster_test.c  colour_test.c  image_test.c  test.c
